--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -2,16 +2,17 @@
   "compilerOptions": {
     "baseUrl": ".",
     "strict": true,
-    "module": "es2020",
+    "module": "CommonJS",
     "types": ["@types/node", "@citizenfx/client", "@citizenfx/server"],
     "declaration": true,
-    "target": "es2021",
+    "sourceMap": true,
+    "target": "ESNext",
     "allowJs": false,
-    "lib": ["es2021"],
+    "lib": ["ESNext"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "noImplicitAny": true
   },
