--- a/web/package.json
+++ b/web/package.json
@@ -24,8 +24,7 @@
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.1",
     "remark-gfm": "^3.0.1",
-    "typescript": "^4.6.3",
-    "vite": "^5.0.12",
+    "vite": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,7 +45,8 @@
     "csstype": "^3.0.10",
     "postcss": "^8.4.31",
     "prop-types": "^15.8.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.5"
   },
   "pnpm": {
     "patchedDependencies": {
